--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A boilerplate application for wechat weapp runtime",
   "scripts": {
     "lint": "gulp lint",
-    "watch": "gulp watch",
+    "dev": "gulp watch",
     "generate": "gulp generate",
     "build": "cross-env NODE_ENV=production gulp build"
   },
