--- a/package.json
+++ b/package.json
@@ -53,11 +53,15 @@
     "gulp-jsonminify": "^1.0.0",
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "inquirer": "^1.2.2",
     "run-sequence": "^1.2.2"
+  },
+  "dependencies": {
+    "gulp-plumber": "^1.1.0"
   }
 }
