--- a/package.json
+++ b/package.json
@@ -58,9 +58,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "inquirer": "^1.2.2",
-    "run-sequence": "^1.2.2"
-  },
-  "dependencies": {
+    "run-sequence": "^1.2.2",
     "gulp-plumber": "^1.1.0"
   }
 }
