--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A boilerplate application for wechat weapp runtime",
   "scripts": {
     "dev": "gulp watch",
-    "generate": "gulp generate",
     "build": "cross-env NODE_ENV=production gulp build"
   },
   "repository": {
@@ -35,17 +34,10 @@
     "babel-preset-es2015": "^6.18.0",
     "cross-env": "^3.1.3",
     "del": "^2.2.2",
-    "eslint": "^3.8.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.1",
     "generate-weapp-page": "^0.1.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.3",
@@ -53,12 +45,12 @@
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "inquirer": "^1.2.2",
-    "run-sequence": "^1.2.2",
-    "gulp-plumber": "^1.1.0"
+    "run-sequence": "^1.2.2"
   }
 }
